完善附属模组注册 API 与精神防护扩展
统一能力分类、技能、伤害行为和精密操作节点的注册与校验。
补充技能 Codec 状态迁移、伤害结算服务、程序动作与效果生命周期。
开放精神免疫目标反馈，增加精神抗性标签并删除作废的玩家抗性配置。
提供独立附属示例、回归测试和开发指南，明确禁止破坏性注入及方法 Mixin 边界。